# webgl_learning

./: .gitignore  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src/examples/: cube.tsx  triangle.tsx
wasm-src/: Cargo.toml
wasm-src/src/: lib.rs
wasm-src/src/exercises/: mod.rs  triangle.rs
wasm-src/src/exercises/cube/: mod.rs  shaders.rs  vertices.rs
wasm-src/src/gl_facade/: mod.rs  shader.rs  utils.rs
wasm-src/src/gl_facade/mesh/: builder.rs  mod.rs  state.rs
