[package]
name = "wasm-src"
version = "0.1.0"
authors = ["Benjamin Nguyen <benjamin.van.nguyen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.60"
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }
nalgebra-glm = "0.17.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlProgram",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
